--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="s.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <section>
@@ -24,3 +24,4 @@
     
 </body>
 </html>
+
